--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.7.4"
+    "mongoose": "^4.7.4",
+    "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
