--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "mongoose": "^4.7.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {},
